fix: overflow and bio

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -352,6 +352,10 @@ nav {
     margin-bottom: 150px;
   }
 
+  #projects {
+    overflow-x: hidden;
+  }
+
   .w-75-85 {
     width: 80%;
   }
